# daedalos

./: .gitignore  .rustfmt.toml  .travis.yml  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  bootimage.nix  build.py  build.sh  cargo-xbuild.nix  config.sh  default.nix  multiboot_header.asm  rationale.md  shell.nix  thanks.md  thanks.txt
.cargo/: config
kernel/arch/x86_64/: long_mode_init.asm  multiboot_header.asm  tty.c  vga.h
kernel/include/kernel/: tty.h
kernel/kernel/: kernel.c
kernel/x86_64/: boot.asm  grub.cfg  kernel.c  linker.ld
libc/include/: stdio.h  stdlib.h  string.h
libc/include/sys/: cdefs.h
libc/stdio/: printf.c  putchar.c  puts.c
libc/stdlib/: abort.c
libc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strlen.c
nix/: default.nix  sources.json
scripts/: new-xcompiler.sh  xcompiler.sh
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  qemu.rs  serial.rs  vga.rs
src/arch/x86_64/: boot.asm  grub.cfg  kernel.c  linker.ld  long_mode_init.asm  printexample.asm
src/memory/paging/: entry.rs  mod.rs
src/qemu/: mod.rs
src/serial/: mod.rs  qemu.rs
src/task/: mod.rs  simple_executor.rs
src/utils/: print.rs
src/vga/: buffer.rs  color.rs  mod.rs  writer.rs
src/vga_buffer/: mod.rs
tests/: basic_boot.rs  bios_boot.rs  heap_allocations.rs  panic_handler.rs  should_panic.rs  stack_overflow.rs
