[package]
name = "daedalos"
version = "0.1.0"
authors = ["Bernardo Meurer <meurerbernardo@gmail.com>"]
edition = "2018"

[package.metadata.bootimage]
run-command = [
    "qemu-system-x86_64",
    "-drive", "format=raw,file={}",
    "-enable-kvm",
]
run-args = ["-display", "curses"]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "should_panic"
harness = false

[dependencies]
bootloader = "0.9.2"
spin = "0.5.2"
uart_16550 = "0.2.5"
volatile = "0.2.6"
x86_64 = "0.10.1"
lazy_static = { version = "1.4.0", features = [ "spin_no_std" ] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
