[package]
name = "daedalos"
version = "0.1.0"
authors = ["Bernardo Meurer <meurerbernardo@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = { version = "0.9.10", features = ["map_physical_memory"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.8.6"
pc-keyboard = "0.5.1"
pic8259_simple = "0.2.0"
spin = "0.5.2"
uart_16550 = "0.2.8"
volatile = "0.4.1"
x86_64 = "0.12.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
run-command = [
    "qemu-system-x86_64",
    "-drive", "format=raw,file={}",
]
run-args = ["-display", "curses"]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
